--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <name>Account RaviWebapp</name>
     <url>http://maven.apache.org</url>
     <properties>
+         <sonar.host.url>http://3.87.90.248:9000/</sonar.host.url>
+        <sonar.login>89be5658800dfc8ffe225ed11cb36e4de90fe4d3</sonar.login>
         <spring.version>4.2.0.RELEASE</spring.version>
         <spring-security.version>4.0.2.RELEASE</spring-security.version>
         <spring-data-jpa.version>1.8.2.RELEASE</spring-data-jpa.version>
