--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <name>Account RaviWebapp</name>
     <url>http://maven.apache.org</url>
     <properties>
-         <sonar.host.url>http://3.87.90.248:9000/</sonar.host.url>
+         <sonar.host.url>http://3.87.90.248:9000</sonar.host.url>
         <sonar.login>89be5658800dfc8ffe225ed11cb36e4de90fe4d3</sonar.login>
         <spring.version>4.2.0.RELEASE</spring.version>
         <spring-security.version>4.0.2.RELEASE</spring-security.version>
@@ -106,7 +106,7 @@
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexusRepo</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <name>Mithun Technologies Snapshot Nexus Repository</name>
 	      <url>http://34.239.162.49:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>    
        </distributionManagement>
