--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <name>Account RaviWebapp</name>
     <url>http://maven.apache.org</url>
     <properties>
-         <sonar.host.url>http://54.167.16.105:9000</sonar.host.url>
-        <sonar.login>89be5658800dfc8ffe225ed11cb36e4de90fe4d3</sonar.login>
+         <sonar.host.url>http://54.167.16.105:9000/</sonar.host.url>
+        <sonar.login>d5faf90291c336136ff397e940a3e1d6bca485f7</sonar.login>
         <spring.version>4.2.0.RELEASE</spring.version>
         <spring-security.version>4.0.2.RELEASE</spring-security.version>
         <spring-data-jpa.version>1.8.2.RELEASE</spring-data-jpa.version>
@@ -22,9 +22,7 @@
         <logback.version>1.1.3</logback.version>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
-
-    <dependencies>
+    </properties>  <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -97,19 +95,25 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
-    </dependencies>
-         <distributionManagement>
-	   <repository>
-	      <id>nexusRepo</id>
+	    
+	   <distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
 	      <url>http://44.192.75.123:8081/repository/maven-releases/</url>
 	    </repository>
+	    
 	    <snapshotRepository>
-	      <id>nexusRepo</id>
+	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository</name>
 	      <url>http:http://44.192.75.123:8081/repository/maven-snapshots/</url>
-	    </snapshotRepository>    
-       </distributionManagement>
+	    </snapshotRepository>
+	    
+	</distributionManagement> 
+	    
+	    
+   
       <build>
         <plugins>
             <plugin>
